Changing in Index and HomeControllers (Delet Descriptions of cars), Change in Used Cars filtration

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <ul class="navbar-nav">
                         <!-- Sign In Link -->
                         <li class="nav-item">
-                            <label for="signInToggle" class="nav-link text-dark" style="cursor: pointer;">Sign In</label>
+                            <label for="signInToggle" class="nav-link text-dark" style="cursor: pointer;">Log In</label>
                         </li>
 						<!-- Sign Up Link -->
                         <li class="nav-item">
